fix: splitter issue and collapse expand icon

--- a/web/src/styles/app.scss
+++ b/web/src/styles/app.scss
@@ -1058,7 +1058,7 @@ html, body {
 
   &--visible {
     right: -10px !important;
-    top: 50% !important;
+    top: 5% !important;
     transform: translateY(-50%) !important;
 
     &:hover {
@@ -1068,11 +1068,16 @@ html, body {
 
   &--hidden {
     left: -10px !important;
-    top: 50% !important;
+    top: 5% !important;
     transform: translateY(-50%) !important;
 
     &:hover {
       transform: translateY(-50%) translateX(10px) !important;
     }
   }
+}
+
+.q-splitter--vertical > .q-splitter__separator > div {
+  left:0px;
+  right: 0px;
 }
